--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -13,5 +13,6 @@
 @import 'tag';
 @import 'image';
 @import 'popup';
-@import "errors";
-@import "form";
+@import 'errors';
+@import 'form';
+@import 'hidden';
