--- a/app/views/ppsps/_form.html.erb
+++ b/app/views/ppsps/_form.html.erb
@@ -233,8 +233,8 @@
         </div>
         <div class="col-md-6 offset-md-3">
           <div id="timetable-summer-input" class=<%= @ppsp.worksite.timetable_summer ? '' : 'hidden-visibility' %>>
-            <%= w.input :timetable_summer_start %>
-            <%= w.input :timetable_summer_end %>
+            <%= w.input :timetable_summer_start, placeholder: '8h30' %>
+            <%= w.input :timetable_summer_end, placeholder: '16h30' %>
           </div>
         </div>
         <div class="col-md-6 offset-md-3" id='timetable-winter'>
@@ -243,8 +243,8 @@
         </div>
         <div class="col-md-6 offset-md-3">
           <div id="timetable-winter-input" class=<%= @ppsp.worksite.timetable_winter ? '' : 'hidden-visibility' %>>
-            <%= w.input :timetable_winter_start %>
-            <%= w.input :timetable_winter_end %>
+            <%= w.input :timetable_winter_start, placeholder: '8h30' %>
+            <%= w.input :timetable_winter_end, placeholder: '16h30' %>
           </div>
         </div>
 
@@ -264,7 +264,7 @@
         <h3 class="col-md-6 offset-md-3 form-subtitle">
           2-6. Locaux affectés au personnel
         </h3>
-        <div class="col-md-10 offset-md-3">
+        <div class="col-md-10 offset-md-1">
            <div id="react-render-site-installations" data-ppsps_id=<%=@ppsp.id%>></div>
         </div>
 
@@ -307,14 +307,14 @@
         <h3 class="col-md-6 offset-md-3 form-subtitle">
           2-10. Moyens d'accès au poste de travail
         </h3>
-        <div class="col-md-10 offset-md-3">
+        <div class="col-md-10 offset-md-1">
           <div id="react-render-altitude-works" data-ppsps_id=<%=@ppsp.id%>></div>
         </div>
 
         <h3 class="col-md-6 offset-md-3 form-subtitle">
           2-11. Engins de chantier utilisés
         </h3>
-        <div class="col-md-10 offset-md-3">
+        <div class="col-md-10 offset-md-1">
           <div class='col-12' id="conductors-form-react" data-ppsps_id=<%=@ppsp.id%>></div>
         </div>
 
@@ -408,12 +408,14 @@
       <h3 class="col-md-6 offset-md-3 form-subtitle">
         3-6. Trousse de secours
       </h3>
-      <p class='text-alert'>Les informations affichées dans cette partie sont issues de la trousse de secours établies par l'entreprise, si cette liste a été mise à jour vous pouvez la modifier (si vous êtes administrateur) dans "Mon profil" - "Modifier les informations"</p>
-      <% current_user.company.kit_security_elements.each do |kit| %>
-        <div>
-          <%= "#{kit.number} : #{kit.name}" %>
-        </div>
-      <% end %>
+      <div class="col-md-6 offset-3">
+        <p class='text-alert'>Les informations affichées dans cette partie sont issues de la trousse de secours établies par l'entreprise, si cette liste a été mise à jour vous pouvez la modifier (si vous êtes administrateur) dans "Mon profil" - "Modifier les informations"</p>
+        <% current_user.company.kit_security_elements.each do |kit| %>
+          <div>
+            <%= "#{kit.number} : #{kit.name}" %>
+          </div>
+        <% end %>
+      </div>
 
       <div class="col-md-6 offset-md-3 form-subtitle">
         3-7. Ajouter des spécificités sur le chantier
