--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -53,6 +53,7 @@
 
 .form-react-conductors {
   height: 380px;
+  color: white;
   background-color: $blue-dark;
   padding: 20px 0;
   display: flex;
