--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -32,21 +32,28 @@
         <div class="security-kit">
           <h3>La trousse de sécurité de mon entreprise</h3>
           <div id="selected-kit-security" class='card-kit-security'>
-            <% @user.company.kit_security_elements.each do |kit| %>
-              <div>
-                <%= "#{kit.number} : #{kit.name}" %>
-                <%= link_to 'x', kit_security_element_path(kit, user_id: @user.id), method: :delete, data: {confirm: 'Êtes-vous sûr ?'}, remote: true%>
+            <div class="card-kit-security">
+              <div class="top"></div>
+              <div class="card-kit-content">
+                <div class="list">
+                  <% @user.company.kit_security_elements.each do |kit| %>
+                    <li>
+                      <%= "#{kit.number} #{kit.name}" %>
+                      <%= link_to 'x', kit_security_element_path(kit, user_id: @user.id), method: :delete, data: {confirm: 'Êtes-vous sûr ?'}, class: 'ml-1', remote: true %>
+                    </li>
+                  <% end %>
+                </div>
               </div>
-            <% end %>
-            <div class="btn-add-security-kit link">Ajouter</div>
+            </div>
+            <div class="btn-add-security-kit link my-2">Ajouter</div>
             <div id="container-form-kit">
-            <%= simple_form_for @kit_security_element, remote: true, html: {class: 'hidden', id: 'add-security-kit' } do |f| %>
-              <p>Ajouter un nouvel élément dans la trousse</p>
-              <%= f.input :number, label: 'Nombre' %>
-              <%= f.input :name, label: 'Contenu' %>
-              <%= f.submit 'Ajouter', class: 'btn-blue' %>
-            <% end %>
-          </div>
+              <%= simple_form_for @kit_security_element, remote: true, html: {class: 'hidden', id: 'add-security-kit' } do |f| %>
+                <p>Ajouter un nouvel élément dans la trousse</p>
+                <%= f.input :number, label: 'Nombre' %>
+                <%= f.input :name, label: 'Contenu' %>
+                <%= f.submit 'Ajouter', class: 'btn-blue' %>
+              <% end %>
+            </div>
           </div>
         </div>
 
