--- a/app/views/moas/_form.html.erb
+++ b/app/views/moas/_form.html.erb
@@ -4,5 +4,5 @@
   <%= f.input :representative, label: 'Représentant' %>
   <%= f.input :phone, label: 'Téléphone' %>
   <%= f.input :email, label: 'Email' %>
-  <%= f.submit 'Ajouter', class: 'btn-blue', id: "MoaBtn" %>
+  <%= f.button :button, 'Valider', class: 'btn-blue', id: "MoaBtn", data: { disable_with: '<i class="fas fa-spin fa-spinner"></i> En cours...'.html_safe } %>
 <% end %>
