--- a/app/views/regional_committees/_form.html.erb
+++ b/app/views/regional_committees/_form.html.erb
@@ -4,5 +4,5 @@
   <%= f.input :phone, label: 'Téléphone' %>
   <%= f.input :fax, label: 'Fax' %>
   <%= f.input :website, label: 'Site internet' %>
-  <%= f.submit 'Ajouter', class: 'btn-blue', id: "RegionalBtn" %>
+  <%= f.button :button, 'Valider', class: 'btn-blue', id: "RegionalBtn", data: { disable_with: '<i class="fas fa-spin fa-spinner"></i> En cours...'.html_safe } %>
 <% end %>
