--- a/app/views/security_coordinators/_form.html.erb
+++ b/app/views/security_coordinators/_form.html.erb
@@ -4,5 +4,5 @@
   <%= f.input :address, label: 'Adresse' %>
   <%= f.input :phone, label: 'Téléphone' %>
   <%= f.input :email, label: 'Email' %>
-  <%= f.submit 'Ajouter', class: 'btn-blue', id: "SecurityBtn" %>
+  <%= f.button :button, 'Valider', class: 'btn-blue', id: "SecurityBtn", data: { disable_with: '<i class="fas fa-spin fa-spinner"></i> En cours...'.html_safe } %>
 <% end %>
