--- a/app/views/work_medecines/_form.html.erb
+++ b/app/views/work_medecines/_form.html.erb
@@ -2,5 +2,5 @@
   <%= f.input :address, label: 'Adresse' %>
   <%= f.input :phone, label: 'Téléphone' %>
   <%= f.input :fax, label: 'Fax' %>
-  <%= f.submit 'Ajouter', class: 'btn-blue', id: "WorkMedecineBtn" %>
+  <%= f.button :button, 'Valider', class: 'btn-blue', id: "WorkMedecineBtn", data: { disable_with: '<i class="fas fa-spin fa-spinner"></i> En cours...'.html_safe } %>
 <% end %>
