--- a/app/views/kit_security_elements/error.js.erb
+++ b/app/views/kit_security_elements/error.js.erb
@@ -1,1 +1,2 @@
 document.getElementById('container-form-kit').innerHTML = "<%= j(render 'form') %>"
+document.getElementById('add-security-kit').classList.remove('hidden')
