--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -214,13 +214,14 @@
 .card-profile {
   position: relative;
   display: flex;
-  justify-content: space-evenly;
   border-radius: 8px;
   padding: 8px;
   gap: 20px;
   margin-bottom: 3em;
   min-height: 120px;
-  .card-profile-info {
+  .card-profile-element {
+    width: 33%;
+    text-align: center;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -230,11 +231,6 @@
       margin-top: 2px;
       margin-bottom: 2px;
     }
-  }
-  .card-profile-stat {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
   }
 }
 
