--- a/app/views/companies/edit.html.erb
+++ b/app/views/companies/edit.html.erb
@@ -1,1 +1,59 @@
-<%= render 'form' %>
+<div class='col-md-6 offset-md-3'>
+  <h2>Les informations de mon entreprise</h2>
+  <div class="d-flex flex-column">
+    <h3>Logo de l'entreprise</h3>
+    <div class="d-flex justify-content-center align-items-center render-logo">
+      <% if @company.logo.attached? %>
+        <div class='d-flex flex-column mb-2 align-items-center'>
+          <%= cl_image_tag @company.logo.key, class: 'icon-logo mb-3' %>
+          <%= link_to 'Supprimer', destroy_logo_company_path(@company), class: 'btn-delete', remote: true %>
+        </div>
+      <% else %>
+        <i style='font-size: 80px;'class="fas fa-question-circle mb-4"></i>
+      <% end %>
+      <i class="fas fa-long-arrow-alt-right mx-4" style='font-size: 40px; display: none;'></i>
+      <img id="newLogo" width="200" class='icon-logo'>
+    </div>
+    <div class='btn-delete' id="removeUpload" style='display: none; text-align: center; width: 100%'>Annuler</div>
+    <%= simple_form_for @company do |f| %>
+      <div class="d-flex justify-content-center">
+        <%= f.input :logo, label: false, input_html: {:onchange => "loadLogo(event)"} %>
+      </div>
+      <div class="d-flex justify-content-center my-4">
+        <%= f.submit "Modifier", class: 'btn-blue' %>
+      </div>
+    <% end %>
+
+    <div class="security-kit">
+      <h3>La trousse de sécurité de mon entreprise</h3>
+      <div class='card-kit-security'>
+        <div class="card-kit-security">
+          <div class="top"></div>
+          <div class="card-kit-content">
+            <div class="list selected-kit-security" id="selected-kit-security">
+              <% @company.kit_security_elements.each do |kit| %>
+                <li>
+                  <%= "#{kit.number} #{kit.name}" %>
+                  <%= link_to 'x', kit_security_element_path(kit), method: :delete, data: {confirm: 'Êtes-vous sûr ?'}, class: 'ml-1', remote: true %>
+                </li>
+              <% end %>
+            </div>
+          </div>
+        </div>
+        <div class="btn-add-security-kit link my-2">Ajouter</div>
+        <div id="container-form-kit">
+          <%= render 'kit_security_elements/form' %>
+        </div>
+      </div>
+    </div>
+
+    <%= simple_form_for @company do |f| %>
+      <h3 class="text-center">Texte de sécurité de l'entreprise</h3>
+      <%= f.text_area :content_secu, class: 'tinymce' %>
+      <%= tinymce %>
+      <div class="d-flex justify-content-center my-4">
+        <%= f.submit "Valider mes modifications", class: 'btn-blue' %>
+      </div>
+    <% end %>
+  </div>
+</div>
