--- a/app/views/kit_security_elements/_list_selected.html.erb
+++ b/app/views/kit_security_elements/_list_selected.html.erb
@@ -1,6 +1,6 @@
-<div id="selected-kit-security">
-  <% @user.company.kit_security_elements. each do |kit| %>
-    <%= "#{kit.number} : #{kit.name}" %>
-    <%= link_to 'x', kit_security_element_path(kit, user_id: @user.id), method: :delete, data: {confirm: 'Êtes-vous sûr ?'}, remote: true%>
-  <% end %>
-</div>
+<% @company.kit_security_elements.each do |kit| %>
+  <li>
+    <%= "#{kit.number} #{kit.name}" %>
+    <%= link_to 'x', kit_security_element_path(kit), method: :delete, data: {confirm: 'Êtes-vous sûr ?'}, class: 'ml-1', remote: true %>
+  </li>
+<% end %>
